JD-656: add handler for search invoice templates (#335)